fix: ensure that the text remains visible while the font is loading

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,7 +1,2 @@
 @import 'tailwindcss';
 @import '@nuxt/ui-pro';
-
-@font-face {
-  font-family: header-logo;
-  src: url(/fonts/header-logo.woff);
-}
